--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,8 @@
 
 /* 默认情况下，使用 Light 主题的颜色 */
 :root {
+  --text-color: #000;
+
   --body-bg: #f6f6f6;
   --container-bg: white;
   --hover-bg: rgba(0, 0, 0, 0.06);
@@ -11,9 +13,15 @@
 
 /* 如果用户启用 Dark 主题，则覆盖这些变量 */
 html.dark {
+  --text-color: #fff;
+
   --body-bg: #101014;
   --container-bg: rgba(225, 235, 255, 0.07);
   --hover-bg: rgba(255, 255, 255, 0.07);
+}
+
+*, :after, :before {
+  box-sizing: border-box;
 }
 
 /* 设置滚动条的宽度和背景颜色 */
